--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,15 +15,16 @@
 
   	<!-- Set the viewport width to device width for mobile -->
   	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
+    
   	<title><%= content_for?(:title) ? yield(:title) : "Untitled" %></title>
 
   	<%= stylesheet_link_tag    "application" %>
   	<%= javascript_include_tag "vendor/custom.modernizr" %>
     <%= csrf_meta_tags %>
   </head>
+  <div id= "background-img">
    <body> 
-   <div id= "background-img">
+   
    <%= render 'layouts/header_nav' %>
  
 
@@ -32,6 +33,11 @@
     <%= yield :scripts %>
     </div>
        <%= yield :javascript %>
-       </div>
+
+          <footer>
+      <p>Made with <i class='icon-heart love'></i> in Boston by Liz </p>
+    </footer>
+
   </body>
+  </div>
 </html>
