--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,9 +1,12 @@
 <div id="main-img">
 <div class="column">
 
- <h2> Connecting you to local farmers markets!
-       where is the closest market to you? </h2>
-       <h6>Only the South shore of Massachusettes  </h6>
+
+ <h3> Connecting you to locally grown food</h3> 
+
+       <h4>Where are the Farmer's markets near you? </h4>
+       
+
         
 
    
@@ -17,5 +20,7 @@
       <button type="submit" class="btn btn-default">Find </button>
     
   </div>
+
+       
 </div>
 </div>
