--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -16,3 +16,4 @@
  */
  @import 'foundation-icons';
 @import url(http://fonts.googleapis.com/css?family=Nunito:400,300);
+@import url(http://fonts.googleapis.com/css?family=Roboto+Condensed);
