--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -8,6 +8,17 @@
       
         <%= f.text_field :username, autofocus: true, class: "form-control" %>
       </div>
+
+       <div class="form-group">
+      
+        <%= f.text_field :first_name, autofocus: true, class: "form-control" %>
+      </div>
+       
+       <div class="form-group">
+      
+        <%= f.text_field :last_name, autofocus: true, class: "form-control" %>
+      </div>
+
       <div class="form-group">
       
         <%= f.email_field :email, autofocus: true, class: "form-control" %>
