--- a/app/views/layouts/_header_nav.html.erb
+++ b/app/views/layouts/_header_nav.html.erb
@@ -3,7 +3,7 @@
 
     <ul class="title-area">
       <li class="name" id="logo">
-        <h1><%= link_to "#{image_tag("beets.jpg")} Fresh Connect".html_safe, root_path %> </h1>
+        <h1><%= link_to "fresh connect".html_safe, root_path %> </h1>
          </li>
           <li class="toggle-topbar menu-icon"><%= link_to 'Menu', '#' %></li>
         </ul>
@@ -13,7 +13,7 @@
    <!--  Right Nav Section -->
       <ul class="right">
         <li class="divider"></li>
-        <li class="has-form nav-bar-coloring">
+        <!-- <li class="has-form nav-bar-coloring">
           <%= form_tag root_path, method: 'get' do %>
             <div class="row collapse">
               <div class="small-8 columns">
@@ -24,7 +24,7 @@
               </div>
             </div> 
           <% end %>
-        </li>
+        </li> -->
 
         <li class="divider"></li>
 
