--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -4,7 +4,7 @@
 
  <h3> Connecting you to locally grown food</h3> 
 
-       <h4>Where are the Farmer's markets near you? </h4>
+       <h4>where are the farmer's markets near you? </h4>
        
 
         
