--- a/app/views/markets/_form.html.erb
+++ b/app/views/markets/_form.html.erb
@@ -21,26 +21,18 @@
   <%= f.text_field :address %>
 </div>
  <div class="field">
-  <%= f.time_select :city %>
+  <%= f.text_field :city %>
 </div>
 
  <div class="field">
-  <%= f.time_select :state %>
+  <%= f.text_field :state %>
 </div>
 
 <div class="field">
-  <%= f.time_select :postal_code %>
-</div>
-<div class="field">
-  <%= f.date_select :datetime, :ignore_time => true %>
-</div>
- 
- <div class="field">
-  <%= f.time_select :datetime, :ignore_time => true %>
+  <%= f.text_field :postal_code %>
 </div>
 
-
-<div class="actions">
+ <div class="actions">
   <%= f.submit 'Create Market'%>
 </div>
 
