--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -14,6 +14,7 @@
  *= require jquery.ui.all
  *= require_tree .
  */
- @import 'foundation-icons';
+@import 'foundation-icons';
 @import url(http://fonts.googleapis.com/css?family=Nunito:400,300);
 @import url(http://fonts.googleapis.com/css?family=Roboto+Condensed);
+@import url(http://fonts.googleapis.com/css?family=Glass+Antiqua);
