--- a/app/views/markets/index.html.erb
+++ b/app/views/markets/index.html.erb
@@ -1,20 +1,28 @@
-<h2>Farmer's Markets</h2>
+<div id="list-markets">
+<h2 class ="title">Farmer's Markets</h2>
 
-   
+    
+
 
   <% @markets.each do |market| %>
     <ul class="no-bullet">
       
       <strong><li><%= link_to market.name %></li></strong>
-      <li><%= market.city %></li>
+       <li><%= market.address%></li>
+        <li><%= market.city%></li>
+        <li><%= market.state%></li>
+        <li><%= market.postal_code%></li>
+      
     </ul>
 
     <ul class="inline-list">
       <li><%= link_to 'Reviews', market_reviews_path(market) %></li>
-      <li><em>Added by <%= User.where(id: market.user_id) %></em></li>
+      <!-- <li><em>Added by <%= User.where(id: market.user_id).first %></em></li> -->
       <li><em>Recommended by <%= pluralize(market.recommendations.length, "user") %></em></li>
       <li><%= button_to 'Recommend', market_recommendations_path(market_id: market.id), class:'small secondary', render: :back %></li>
     </ul>
-   <hr />
+   <hr/>
   <%- end -%>
+</div>
+
 </div>
