--- a/app/views/layouts/_header_nav.html.erb
+++ b/app/views/layouts/_header_nav.html.erb
@@ -13,18 +13,18 @@
    <!--  Right Nav Section -->
       <ul class="right">
         <li class="divider"></li>
-        <!-- <li class="has-form nav-bar-coloring">
-          <%= form_tag root_path, method: 'get' do %>
+     <li class="has-form nav-bar-coloring">
+          <%= form_tag markets_path, method: 'get' do %>
             <div class="row collapse">
               <div class="small-8 columns">
-                <%= text_field_tag :search, params[:search] %>
+                <%= text_field_tag :search, params[:search], class: "span2" %>
               </div>
               <div class="small-4 columns">
                 <%= submit_tag "Search", class: "button" %>
               </div>
             </div> 
           <% end %>
-        </li> -->
+        </li> 
 
         <li class="divider"></li>
 
