--- a/app/views/layouts/_header_nav_sign_in.html.erb
+++ b/app/views/layouts/_header_nav_sign_in.html.erb
@@ -1,12 +1,11 @@
 <li class="active" id="new-market-link"><%= link_to ' Create Market', new_market_path, class: "icon-upload" %></li>
-<li class="divider"></li>
-
 
 
 <li class="divider hide-for-small"></li>
 
-<li class="has-dropdown"><a href="#">Account</a>
+
+<li class="has-dropdown not-click"><a href="#">Account</a>
 <ul class="dropdown">
   <li><a href="#"><i class="icon-cog"></i> Settings</a></li>
-  <li><%= link_to 'Log Out', destroy_user_session_path, method: :delete, class: "icon-signout" %></li>
+  <li><%= link_to ' Log Out', destroy_user_session_path, method: :get, class: "icon-signout" %></li>
 </ul>
