--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,21 +25,28 @@
 
     <%= csrf_meta_tags %>
   </head>
+  <body>
   <div id= "background-img">
-   <body> 
+  
    
    <%= render 'layouts/header_nav' %>
- 
+   <div class='row'>
+      <%= display_flash_messages %>
+    </div>
 
    <div id="row">
     <%= yield %>
-    <%= yield :scripts %>
+    
     </div>
+      <%= yield :script %>
+
        <%= yield :javascript %>
 
           <footer>
       <p>Made with <i class='icon-heart love'></i> in Boston by Liz </p>
     </footer>
+  
+
 
   </body>
   </div>
