--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,6 +38,12 @@
     <%= yield %>
     
     </div>
+   <div class="icon">
+   <div id="icon-1"></div>
+   <div id="icon-2"></div>
+   <div id="icon-3"></div>
+  </div>
+
       <%= yield :script %>
 
        <%= yield :javascript %>
