--- a/app/views/markets/index.html.erb
+++ b/app/views/markets/index.html.erb
@@ -1,5 +1,6 @@
 <div id="list-markets">
 <h2 class ="title">Farmer's Markets</h2>
+
 <%= paginate @markets %>
 
   <% @markets.each do |market| %>
@@ -23,4 +24,4 @@
   <%- end -%>
 </div>
 </div>
- 
+ <%= paginate @markets %>
