--- a/app/assets/stylesheets/markets.css.scss
+++ b/app/assets/stylesheets/markets.css.scss
@@ -8,7 +8,7 @@
 }
 
 h2, h3, h4, h5, h6 {
-  color: #fff;
+  color: #F24825;
   font-family:'Roboto Condensed', sans-serif;
   font-size: 30px;
 }
@@ -77,32 +77,19 @@ top-bar{
 // #background-img {
 //   background: image-url('canvas.jpg');
 // }
-
+#row{
+  margin-bottom:-30px;
+}
 
 #main-img{
   background: image-url('local_blue.jpg');
-  // background-size: 40% 40%;
+  background-size: 100% 100%;
   height: 400px;
   width:100%;
   border-top: 1px solid #999;
   border-bottom: 1px solid #999;
   background-size:cover;
   }
-.icon{
-  height:400px;
-  width:100%;
-}
-
-#icon-1{
-
-}
-#icon-2{
-
-}
-
-#icon-3{
-
-}
 
 p{
    color: #7f5000;
