--- a/app/views/layouts/_header_nav_sign_in.html.erb
+++ b/app/views/layouts/_header_nav_sign_in.html.erb
@@ -6,6 +6,6 @@
 
 <li class="has-dropdown not-click"><a href="#">Account</a>
 <ul class="dropdown">
-  <li><a href="#"><i class="icon-cog"></i> Settings</a></li>
+  <li><a href="#"><i class="icon-cog cog"></i> Settings</a></li>
   <li><%= link_to ' Log Out', destroy_user_session_path, method: :get, class: "icon-signout" %></li>
 </ul>
