--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -2,7 +2,7 @@
   <h1><%= "#{@market.name}'s Reviews" %></h1>
 
   <% if !current_user %>
-    <p>You must <%= link_to 'Log In', new_user_session_path %> to review this  farmer's market.</p>
+    <p class="review"> You must <%= link_to 'Log In', new_user_session_path %> to review this  farmer's market.</p>
   <%- else -%>
     <% @reviews.each do |review| %>
     <ul class="no-bullet">
@@ -13,9 +13,9 @@
   <% end %>
 
   <%- if @reviews.length == 0 %>
-    <%= link_to "Be the first to review this", new_market_review_path %>
+   <p class ="review"> <%= link_to "Be the first to review this", new_market_review_path %>
   <% else %>
-    <%= link_to "Review this", new_market_review_path %>
+    <%= link_to "Review this", new_market_review_path %></p>
   <% end %>
 <% end %>
 
