--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,9 +2,9 @@
 <div class="column">
 
 
- <h3> Connecting you to locally grown food</h3> 
+ <h3 class="img-title">Connecting you to locally grown food 
 
-       <h4>where are the farmer's markets near you? </h4>
+       where are the farmer's markets near you? </h3>
        
 
   <%= form_tag(markets_path, :method => "get", class: "navbar-form", id: "search-form") do %>
