--- a/app/assets/stylesheets/markets.css.scss
+++ b/app/assets/stylesheets/markets.css.scss
@@ -15,10 +15,18 @@ body{
   color: #fff;
   font-family:'Roboto Condensed', sans-serif;
   font-size: 30px;
-  text-shadow: 5px 5px 15px rgba(255,255,255, 0.3);
+  text-shadow: 15px 25px 15px 50px rgb(44,62,80);
 }
+
 h2 {
   color: #2c3e50;
+}
+.img-title{
+  color: #fff;
+  font-family:'Roboto Condensed', sans-serif;
+  font-size: 40px;
+  text-shadow: 5px 5px 5px #000;
+
 }
 
 .inline-list{
@@ -30,7 +38,12 @@ h2 {
 }
 
 #list-markets{
- background: image-url('farmer.png');
+
+ border-width:100px;
+ border-image: url('cardboard.jpg') 80 80 repeat;
+}
+.center{
+  background-color:#ecf0f1;
 }
 
 .title{
@@ -38,6 +51,7 @@ h2 {
   font-size:50px;
   color:#2c3e50;
 }
+
 a{
    color: #2c3e50;
 
@@ -63,7 +77,7 @@ h2{
 }
 
 .pagination{
-  padding: 15px;
+  padding: 25px;
 }
 
 .form-group{
@@ -71,9 +85,81 @@ h2{
   width: 70%;
 }
 
+
+// .title-list{
+//  padding:inherit;
+//     width: 5px; // it will start the second row if it passes 50 px
+//     position:relative;
+//     top: -5px; // due to the rotation i had to move it up a bit
+//     transform:rotate(-35deg);
+//     -ms-transform:rotate(-40deg); /* IE 9 */
+//     -moz-transform:rotate(-40deg); /* Firefox */
+//     -webkit-transform:rotate(-35deg); /* Safari and Chrome */
+//     -o-transform:rotate(-40deg); /* Opera */
+// }
+/* markets page */
+
+
+
+
+.ribbon-green {
+  font-family: 'Roboto Condensed', sans-serif;
+  font-size:26px;
+  color: #fff;
+  text-align: center;
+   text-shadow: 5px 5px 5px #000;
+  -webkit-transform: rotate(-40deg);
+  -moz-transform:    rotate(-45deg);
+  -ms-transform:     rotate(-45deg);
+  -o-transform:      rotate(-45deg);
+  position: relative;
+  padding: 7px 0;
+  left: -25px;
+  top: 15px;
+  width: 150px;
+  background-color: #2c3e50;
+  border-radius:0 0 0 5px;
+  // background-image: -webkit-gradient(linear, left top, left bottom, from(#BFDC7A), to(#8EBF45)); 
+  // background-image: -webkit-linear-gradient(top, #BFDC7A, #8EBF45); 
+  // background-image:    -moz-linear-gradient(top, #BFDC7A, #8EBF45); 
+  // background-image:     -ms-linear-gradient(top, #BFDC7A, #8EBF45); 
+  // background-image:      -o-linear-gradient(top, #BFDC7A, #8EBF45); 
+  color: #fff;
+  -webkit-box-shadow: 0px 0px 3px rgba(0,0,0,0.3);
+  -moz-box-shadow:    0px 0px 3px rgba(0,0,0,0.3);
+  box-shadow:         0px 0px 3px rgba(0,0,0,0.3);
+}
+
+.ribbon-green:before, .ribbon-green:after {
+  content: "";
+  border-top:   3px solid #6e8900;   
+  border-left:  3px solid transparent;
+  border-right: 3px solid transparent;
+  position:absolute;
+  bottom: -3px;
+}
+
+.ribbon-green:before {
+  left: 0;
+}
+.ribbon-green:after {
+  right: 0;
+}
+
+.tiny-font{
+font-size:12px;
+ padding-right:400px;
+ padding-top:0px;
+}
+
 #logo a {
   font-family:'Roboto Condensed', sans-serif;
   font-size: 25px;
+  background-color: #2c3e50;
+  text-shadow: 0px 1px 2px rgba(255,255,255, 0.3);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -moz-background-clip: text;
  
 }
 
@@ -115,13 +201,13 @@ p{
 
 }
 
-#logo a, footer > p{
+footer > p{
   text-align: center;
   margin-right:455px;
   color: transparent;
   font-size:20px;
   font-family: 'Roboto Condensed', sans-serif;
-  background-color:  #2c3e50;
+  background-color: #2c3e50;
   text-shadow: 0px 1px 2px rgba(255,255,255, 0.3);
   background-clip: text;
   -webkit-background-clip: text;
