--- a/app/views/markets/index.html.erb
+++ b/app/views/markets/index.html.erb
@@ -1,5 +1,11 @@
+
 <div id="list-markets">
-<h2 class ="title">Farmer's Markets</h2>
+
+       <div class="center">
+       <div class="ribbon-green">fresh connect</div>
+ 
+<h2 class ="title">Nearest Farmer's Markets</h2>
+<p class="tiny-font">(based on your search)</p>
 
 <%= paginate @markets %>
 
@@ -16,7 +22,7 @@
 
     <ul class="inline-list">
       <li><%= link_to 'Reviews', market_reviews_path(market) %></li>
-      <!-- <li><em>Added by <%= User.where(id: market.user_id).first %></em></li> -->
+   <!--   <li><em>Added by <%= User.where(id: market.user_id).first%></em></li>  -->
       <li><em>Recommended by <%= pluralize(market.recommendations.length, "user") %></em></li>
       <li><%= button_to 'Recommend', market_recommendations_path(market_id: market.id), class:'small secondary', render: :back %></li>
     </ul>
@@ -25,5 +31,6 @@
 
 
  <%= paginate @markets %>
+ </div>
  </div>
  </div>
