--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,6 +19,8 @@
   	<title><%= content_for?(:title) ? yield(:title) : "Untitled" %></title>
 
   	<%= stylesheet_link_tag    "application" %>
+
+    <%= stylesheet_link_tag    "market.css.scss" %>
   	<%= javascript_include_tag "vendor/custom.modernizr" %>
   
 
