--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -9,11 +9,12 @@
  * You're free to add application-wide styles to this file and they'll appear at the top of the
  * compiled file, but it's generally better to create a new file per style scope.
  *
+
  *= require_self
  *= require foundation_and_overrides
  *= require jquery.ui.all
  *= require_tree .
  */
-@import 'foundation-icons';
+// @import 'foundation-icons';
 @import url(http://fonts.googleapis.com/css?family=Nunito:400,300);
 @import url(http://fonts.googleapis.com/css?family=Roboto+Condensed);
