--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -13,6 +13,7 @@
  *= require_self
  *= require foundation_and_overrides
  *= require jquery.ui.all
+ *= require 'market'
  *= require_tree .
  */
 // @import 'foundation-icons';
