--- a/app/assets/stylesheets/markets.css.scss
+++ b/app/assets/stylesheets/markets.css.scss
@@ -1,7 +1,7 @@
 // Place all the styles related to the recipes controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-
+//= depend_on_asset "local_blue.jpg"
 body{
   margin: 0 auto;
 }
