--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,8 @@
 
   	<%= stylesheet_link_tag    "application" %>
 
+     <%= javascript_include_tag "application" %>
+
   	<%= javascript_include_tag "vendor/custom.modernizr" %>
   
 
