--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
     
   	<title><%= content_for?(:title) ? yield(:title) : "fresh connect" %></title>
 
-  	<%= stylesheet_link_tag "application", :media => "all" %> %>
+  	<%= stylesheet_link_tag "application", :media => "all" %>
 
      <%= javascript_include_tag "application" %>
 
