compile stylesheets locally

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,8 +19,8 @@
   	<title><%= content_for?(:title) ? yield(:title) : "fresh connect" %></title>
 
   	<%= stylesheet_link_tag "application" %>
-
-  
+     
+      <%= javascript_include_tag "application" %>
 
   	<%= javascript_include_tag "vendor/custom.modernizr" %>
   
