--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -15,6 +15,7 @@
  *= require jquery.ui.all
  *= require_tree .
  */
-// @import 'foundation-icons';
+
+@import 'foundation-icons';
 @import url(http://fonts.googleapis.com/css?family=Nunito:400,300);
 @import url(http://fonts.googleapis.com/css?family=Roboto+Condensed);
