--- a/app/views/markets/new.html.erb
+++ b/app/views/markets/new.html.erb
@@ -1,6 +1,7 @@
 
-<h2> Create a new Market </h2>
+<h2> create a new market </h2>
 
 <%= render 'form' %>
 
-<%= link_to 'All Markets', markets_path %> 
+
+
