--- a/app/views/reviews/index.html.erb
+++ b/app/views/reviews/index.html.erb
@@ -1,3 +1,4 @@
+<div class="market-new">
 <% if @reviews %>
   <h1><%= "#{@market.name}'s Reviews" %></h1>
 
@@ -18,4 +19,4 @@
     <%= link_to "Review this", new_market_review_path %></p>
   <% end %>
 <% end %>
-
+</div>
