--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,3 +1,4 @@
+<div class="market-new">
 <% @review.errors.full_messages.each do | error | %>
   <%= content_tag :p, error %>
 <% end %>
@@ -6,10 +7,11 @@
 <% if !current_user %>
   <p>You must sign in to review this farmer's market.</p>
 <%- end -%>
-
+<div class="review-body">
 <%= simple_form_for([@market, @review]) do |f| %>
   <%= f.input_field :body, placeholder: 'What I think about this farmers market' %>
   <%= f.button :submit %>
 <% end %>
-
+</div>
 <%= link_to 'Cancel', market_reviews_path(@market) %>
+</div>
