--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -79,10 +79,10 @@ $default-float: left;
 
 // Colors
 
-$primary-color: #fff;
+$primary-color:#34495e;
 // $secondary-color: #e9e9e9;
 $alert-color: #c60f13;
-$success-color:#fff;
+$success-color:#34495e;
 
 // Make sure border radius matches unless we want it different.
 
@@ -300,7 +300,7 @@ $success-color:#fff;
 // $form-label-font-color: lighten(#000, 30%);
 // $form-label-bottom-margin: em-calc(3);
 // $input-font-family: inherit;
-// $input-font-color: rgba(0,0,0,0.75);
+ $input-font-color: #fff;
 // $input-font-size: em-calc(14);
 // $input-bg-color: #fff;
 // $input-focus-bg-color: darken(#fff, 2%);
@@ -369,7 +369,7 @@ $button-med: em-calc(5);
 // We use these to control button text styles.
 
 $button-font-family:'Roboto', sans-serif;
-$button-font-color: #7f5000;
+$button-font-color: #fff;
 // $button-font-color-alt: #333;
 $button-font-med: em-calc(15);
 //$button-font-tny: em-calc(11);
@@ -384,7 +384,7 @@ $button-font-med: em-calc(15);
 
 // We use these to control button border styles.
 
-// $button-border-width: 1px;
+$button-border-width: 2px;
 $button-border-style: none;
 
 // We use this to set the default radius used throughout the core.
@@ -1292,7 +1292,7 @@ $topbar-link-font-size: em-calc(11);
 $topbar-link-bg-hover: darken($topbar-bg-color, 10%);
 // $topbar-link-bg-active: darken($topbar-bg-color, 3%);
 
- $topbar-dropdown-label-color:#7f5000;;
+ $topbar-dropdown-label-color:#fff;
  $topbar-dropdown-label-text-transform: uppercase;
 // $topbar-dropdown-label-font-weight: bold;
 // $topbar-dropdown-label-font-size: em-calc(10);
