--- a/app/assets/stylesheets/markets.css.scss
+++ b/app/assets/stylesheets/markets.css.scss
@@ -5,8 +5,6 @@
 
 
 .column{
-  height:200px;
-  width:105%;
  padding-top: 45px;
  padding-left:555px;
 }
@@ -18,13 +16,11 @@
   text-shadow: 15px 25px 15px 50px rgb(44,62,80);
 }
 
-h2 {
-  color: #2c3e50;
-}
+
 .img-title{
   color: #fff;
   font-family:'Roboto Condensed', sans-serif;
-  font-size: 40px;
+  font-size: 34px;
   text-shadow: 5px 5px 5px #000;
 
 }
@@ -54,17 +50,23 @@ h2 {
 
 a{
    color: #2c3e50;
-
 }
 
+ a:hover{
+  color:black;
+ }
 
-h2{
-  padding-left: 105px;
+
+h2, h3{
+  text-align:center;
+  padding-top:25px;
+   color: #2c3e50;
 }
 
 .btn-default{
-  color:  #2c3e50;
+  color:  #fff;
   text-shadow: 0px 1px 2px rgba(255,255,255, 0.3);
+  
 }
 
 
@@ -72,18 +74,19 @@ h2{
   width:200px;
 
 }
-.button > .success{
-  color:#2c3e50;
+.button, .button > .success{
+  background-color:#2c3e50;
+}
+.actions{
+  padding-left:325px;
+  padding-top:25px;
 }
 
 .pagination{
   padding: 25px;
 }
 
-.form-group{
-  padding-left:105px;
-  width: 70%;
-}
+
 
 
 // .title-list{
@@ -98,9 +101,18 @@ h2{
 //     -o-transform:rotate(-40deg); /* Opera */
 // }
 /* markets page */
+ #row{
+  background-image:image-url('cardboard.jpg');
+}
 
-
-
+textarea{
+  width:70%;
+  height:100px;
+  text-align:center;
+}
+.review-body{
+  padding-left:300px;
+}
 
 .ribbon-green {
   font-family: 'Roboto Condensed', sans-serif;
@@ -146,11 +158,6 @@ h2{
   right: 0;
 }
 
-.tiny-font{
-font-size:12px;
- padding-right:400px;
- padding-top:0px;
-}
 
 #logo a {
   font-family:'Roboto Condensed', sans-serif;
@@ -172,7 +179,10 @@ font-size:12px;
 top-bar{
   margin-bottom:0;
 }
-
+.field, .form-group {
+  padding:5px 15px 5px 325px;
+  width:80%;
+}
 
 #main-img{
   background: image-url('local_blue.jpg');
@@ -184,15 +194,15 @@ top-bar{
   background-size:cover;
   }
 
-p{
-  color: #2c3e50;
-  text-shadow: 0px 1px 2px rgba(255, 255, 255, 0.5);
-  font-family:'Roboto Condensed', sans-serif;
-  font-size: 20px;
-  font-size: 250%;
-  float:right;
+// p{
+//   color: #2c3e50;
+//   text-shadow: 0px 1px 2px rgba(255, 255, 255, 0.5);
+//   font-family:'Roboto Condensed', sans-serif;
+//   font-size: 20px;
+//   font-size: 250%;
+//   float:right;
 
-}
+// }
 
 
 .review{
@@ -200,16 +210,14 @@ p{
   padding-right:100px;
 
 }
-footer{
-  height:100px;
-  width:100%;
-}
+
 
 footer > p{
   text-align: center;
-  margin-left:-150px;
+  padding:5px;
+  margin-bottom:-5px;
   color: transparent;
-  font-size:20px;
+  font-size:14px;
   font-family: 'Roboto Condensed', sans-serif;
   background-color: #2c3e50;
   text-shadow: 0px 1px 2px rgba(255,255,255, 0.3);
