--- a/app/views/markets/_form.html.erb
+++ b/app/views/markets/_form.html.erb
@@ -1,3 +1,5 @@
+<div class="market-new">
+
 <%= form_for @market do |f| %>
 
 <% if @market.errors.any? %>
@@ -38,3 +40,4 @@
 </div>
 
 <% end %>
+</div>
