depend on asset jpg

--- a/app/assets/stylesheets/markets.css.scss
+++ b/app/assets/stylesheets/markets.css.scss
@@ -2,6 +2,7 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 //= depend_on_asset "local_blue.jpg"
+//= depend_on_asset "cardboard.jpg"
 
 
 .column{
