--- a/app/assets/stylesheets/markets.css.scss
+++ b/app/assets/stylesheets/markets.css.scss
@@ -4,7 +4,10 @@
 //= depend_on_asset "cardboard.jpg"
 //= depend_on_asset "local_blue.jpg"
 
+body{
+  margin: 0 auto;
 
+}
 
 .column{
  padding-top: 45px;
@@ -12,7 +15,7 @@
 }
 
  h3, h4, h5, h6 {
-  color: #fff;
+  color:  #2c3e50;
   font-family:'Roboto Condensed', sans-serif;
   font-size: 30px;
   text-shadow: 15px 25px 15px 50px rgb(44,62,80);
