--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,4 @@
-
+<div class="market-new">
 
     <h2>Sign Up</h2>
   
@@ -44,4 +44,5 @@
 
     <%= render "devise/shared/links" %>
   
+</div>
 </div>
