--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -300,7 +300,7 @@ $success-color:#34495e;
 // $form-label-font-color: lighten(#000, 30%);
 // $form-label-bottom-margin: em-calc(3);
 // $input-font-family: inherit;
- $input-font-color: #fff;
+ $input-font-color: black;
 // $input-font-size: em-calc(14);
 // $input-bg-color: #fff;
 // $input-focus-bg-color: darken(#fff, 2%);
