--- a/app/assets/stylesheets/markets.css.scss
+++ b/app/assets/stylesheets/markets.css.scss
@@ -6,13 +6,15 @@
 
 body{
   margin: 0 auto;
-  
 
 }
 
 .column{
  padding-top: 45px;
- padding-left:555px;
+ padding-left:600px;
+}
+.form-find{
+  padding-left:100px;
 }
 
  h3, h4, h5, h6 {
@@ -193,7 +195,7 @@ top-bar{
 
 #main-img{
   background: image-url('local_blue.jpg');
-  background-size: 100% 100%;
+  // background-size: 100% 100%;
   height: 600px;
   width:100%;
   border-top: 1px solid #999;
