--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -6,7 +6,7 @@
 <br>
        where are the farmer's markets near you? </h3>
        
-
+  <div class="form-find">
   <%= form_tag(markets_path, :method => "get", class: "navbar-form", id: "search-form") do %>
     <div class="input-append">
       <%= text_field_tag :search, params[:search], class: "span2", placeholder: "address, city, or zip" %>
@@ -14,7 +14,7 @@
       <br>
         <br>
       <button type="submit" class="btn btn-default">Find </button>
-
+</div>
        
 </div>
 </div>
