--- a/app/assets/stylesheets/markets.css.scss
+++ b/app/assets/stylesheets/markets.css.scss
@@ -10,8 +10,8 @@ body{
 }
 
 .column{
- padding-top: 45px;
- padding-left:600px;
+ padding-top: 65px;
+ padding-left:650px;
 }
 .form-find{
   padding-left:100px;
@@ -171,8 +171,8 @@ textarea{
 #logo a {
   font-family:'Roboto Condensed', sans-serif;
   font-size: 25px;
-  background-color: #2c3e50;
-  text-shadow: 0px 1px 2px rgba(255,255,255, 0.3);
+  color: #2c3e50;
+  // text-shadow: 0px 1px 2px rgba(255,255,255, 0.3);
   background-clip: text;
   -webkit-background-clip: text;
   -moz-background-clip: text;
@@ -228,7 +228,7 @@ footer > p{
   color: transparent;
   font-size:14px;
   font-family: 'Roboto Condensed', sans-serif;
-  background-color: #2c3e50;
+  color: #2c3e50;
   text-shadow: 0px 1px 2px rgba(255,255,255, 0.3);
   background-clip: text;
   -webkit-background-clip: text;
