--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -39,7 +39,7 @@
    
    
 </body>
-          <footer>
+          <footer class="footer">
       <p>Made with <i class='icon-heart love'></i> in Boston by Liz </p>
     </footer>
   
