--- a/app/views/markets/index.html.erb
+++ b/app/views/markets/index.html.erb
@@ -2,10 +2,10 @@
 <div id="list-markets">
 
        <div class="center">
-       <div class="ribbon-green">fresh connect</div>
+       <div class="ribbon-blue">fresh connect</div>
  
 <h2 class ="title">Nearest Farmer's Markets</h2>
-<p class="tiny-font">(based on your search)</p>
+
 
 <%= paginate @markets %>
 
