--- a/app/assets/stylesheets/markets.css.scss
+++ b/app/assets/stylesheets/markets.css.scss
@@ -9,10 +9,11 @@ body{
 
 .column{
  padding-top: 65px;
- padding-left:650px;
+ padding-left:600px;
 }
 .form-find{
-  padding-left:100px;
+  padding-left:120px;
+  padding-top:-5px
 }
 
  h3, h4, h5, h6 {
@@ -24,9 +25,10 @@ body{
 
 
 .img-title{
+  padding-left:100px;
   color: #fff;
   font-family:'Roboto Condensed', sans-serif;
-  font-size: 34px;
+  font-size: 30px;
   text-shadow: 5px 5px 5px #000;
 
 }
@@ -42,8 +44,10 @@ body{
 #list-markets{
  border-width: 80px;
  border-image: url('cardboard.jpg') 80 80 repeat;
+  -webkit-border-image: url('cardboard.jpg') 80 80 repeat;
  -moz-border-image: url('cardboard.jpg') 80 80 repeat;
- -webkit-border-image: url('cardboard.jpg') 80 80 repeat;
+ -ms-border-image: url('cardboard.jpg') 80 80 repeat;
+ -o-border-image: url('cardboard.jpg') 80 80 repeat;
 }
 
 .center{
@@ -123,7 +127,7 @@ textarea{
   padding-left:300px;
 }
 
-.ribbon-green {
+.ribbon-blue {
   font-family: 'Roboto Condensed', sans-serif;
   font-size:26px;
   color: #fff;
@@ -151,7 +155,7 @@ textarea{
   box-shadow:         0px 0px 3px rgba(0,0,0,0.3);
 }
 
-.ribbon-green:before, .ribbon-green:after {
+.ribbon-blue:before, .ribbon-blue:after {
   content: "";
   border-top:   3px solid #6e8900;   
   border-left:  3px solid transparent;
@@ -160,10 +164,10 @@ textarea{
   bottom: -3px;
 }
 
-.ribbon-green:before {
+.ribbon-blue:before {
   left: 0;
 }
-.ribbon-green:after {
+.ribbon-blue:after {
   right: 0;
 }
 
@@ -199,7 +203,7 @@ top-bar{
   height: 500px;
   width:100%;
   border-top: 1px solid #999;
-  border-bottom: 1px solid #999;
+  border-bottom:2px solid #999;
   background-size:cover;
   }
 
@@ -219,16 +223,65 @@ top-bar{
   padding-right:100px;
 
 }
-
-footer{
+#icons{
+  width:100%;
+  height:340px;
+  // margin-bottom:300px;
   background-color:#fff;
-  margin-bottom:-70px;
+}
+.clock{
+  display:inline-block;
+  width:33%;
+  left:0;
+  // background-color:purple;
+  padding:40px;
+  padding-left:130px;
+}
+.fa-5x{
+  font-size:5em;
+   color: #2c3e50;
+  text-shadow: 0px 1px 2px rgba(255,255,255, 0.3);
+   
+}
+.fa-5x:hover{
+  color:#999;
+}
+ .details{
+  margin-left:-60px;
+  font-family:'Roboto Condensed', sans-serif;
+  font-size: 18px;
+ color: #2c3e50;
+  text-shadow: 0px 1px 2px rgba(255,255,255, 0.3);
+  padding-top:10px;
+  
+ }
+.comments{
+  display:inline-block;
+  padding:25px;
+  padding-left:130px;
+  // background-color:yellow;
+  left:0;
+  width: 33%; 
 }
 
-.footer > p{
+.heart{
+  display:inline-block;
+  padding:25px;
+  padding-left:130px;
+  position:relative;
+  width:33%;
+  // background-color:red;
+}
+
+.footer{
+  background-color:#fff;
+  width:100%;
+  // border-top: 2px solid #999;
+  
+}
+
+.footer > .made{
   text-align: center;
-  padding:5px;
-  // margin-bottom: 100px;
   color: transparent;
   font-size:14px;
   font-family: 'Roboto Condensed', sans-serif;
