--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
      <link href='http://fonts.googleapis.com/css?family=Pacifico|Inika' rel='stylesheet' type='text/css'>
     
       <link href="http://netdna.bootstrapcdn.com/font-awesome/3.2.1/css/font-awesome.css" rel="stylesheet">
+       <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
   	<!-- Uncomment to make IE8 render like IE7 -->
   	<!-- <meta http-equiv="X-UA-Compatible" content="IE=7" /> -->
 
@@ -40,7 +41,7 @@
    
 </body>
           <footer class="footer">
-      <p>Made with <i class='icon-heart love'></i> in Boston by Liz </p>
+      <p class="made">Made with <i class='icon-heart love'></i> in Boston by Liz </p>
     </footer>
   
      <%= javascript_include_tag "application" %>
