--- a/app/assets/stylesheets/markets.css.scss
+++ b/app/assets/stylesheets/markets.css.scss
@@ -65,7 +65,7 @@ a{
 }
 
  a:hover{
-  color:black;
+  color:#999;
  }
 
 
@@ -198,7 +198,7 @@ top-bar{
 }
 
 #main-img{
-  background: image-url('local_blue.jpg');
+  background: image-url('local_blue.jpg')no-repeat;
   // background-size: 100% 100%;
   height: 500px;
   width:100%;
@@ -226,7 +226,7 @@ top-bar{
 #icons{
   width:100%;
   height:350px;
-  // margin-bottom:300px;
+  margin-bottom:100px;
   background-color:#fff;
 }
 .clock{
