--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -20,7 +20,7 @@
 </div>
 </div>
 </div>
-<div id="icons">
+<!-- div id="icons">
  <div class="clock">
    <p><i class="fa fa-calendar-o fa-5x"></i> </p>
    <p class="details">
@@ -40,3 +40,4 @@
  </p>
  </div>
 </div>
+ -->
