--- a/app/assets/stylesheets/markets.css.scss
+++ b/app/assets/stylesheets/markets.css.scss
@@ -5,6 +5,7 @@
 //= depend_on_asset "local_blue.jpg"
 body{
   margin-bottom:0px;
+  position:relative;
 }
 
 .column{
@@ -279,11 +280,14 @@ top-bar{
   background-color:#fff;
   clear:both;
   padding-top:5px;
+  bottom: 0;
+
   // border-top: 2px solid #999;
   
 }
 
 .footer > .made{
+
   text-align: center;
   color: transparent;
   font-size:14px;
@@ -295,10 +299,12 @@ top-bar{
   -moz-background-clip: text;
 }
 
-footer .love {
-  color: #F24825;
-  text-shadow: 0px 1px 2px rgba(255,255,255, 0.3);
-  background-clip: text;
-  -webkit-background-clip: text;
-  -moz-background-clip: text;
-}
+// footer .love {
+
+//   color: #F24825;
+//   text-shadow: 0px 1px 2px rgba(255,255,255, 0.3);
+//   background-clip: text;
+//   -webkit-background-clip: text;
+//   -moz-background-clip: text;
+// }
+
